# atlas

./: .env.example  .env.prod.example  .gitattributes  .gitignore  API_PROVIDER_SETUP.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  vercel.json
deploy/backend/: .gitignore  pyproject.toml  render.yaml
deploy/backend/database/migrations/postgres/: env.py
deploy/backend/database/migrations/postgres/versions/: 0001_initial_cloud_schema.py
deploy/backend/src/atlas_backend/ai/: config.py  models.py
deploy/backend/src/atlas_backend/ai/clients/: __init__.py  anthropic_client.py  (+6 more)
deploy/backend/src/atlas_backend/api/: __init__.py  app.py
deploy/backend/src/atlas_backend/auth/: __init__.py  service.py
deploy/backend/src/atlas_backend/core/: __init__.py  config.py  logging.py  responses.py
deploy/backend/src/atlas_backend/data/: __init__.py
deploy/backend/src/atlas_backend/documents/: pipeline.py  qa.py
deploy/backend/src/atlas_backend/local/: hardware.py  health.py  memory.py
deploy/backend/src/atlas_backend/orchestration/: __init__.py  evidence_tracker.py  report_generator.py  task_queue.py
deploy/backend/src/atlas_backend/persistence/: __init__.py  local_store.py
deploy/backend/src/atlas_backend/projects/: knowledge_graph.py  models.py
deploy/backend/src/atlas_backend/search/: providers.py  service.py
(+124 files in other folders)
