[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-backend"
version = "0.1.0"
description = "Atlas FastAPI backend."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "slowapi>=0.1.9",
  "argon2-cffi>=23.1",
  "boto3>=1.34",
  "fastapi>=0.111",
  "httpx>=0.27",
  "neo4j>=5.22",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.12",
  "qdrant-client>=1.10",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "structlog>=24.2",
  "uvicorn[standard]>=0.30",
  "pdfminer.six>=20221105",
  "pdfplumber>=0.10.0",
  "python-docx>=1.1.0",
  "markdown>=3.5",
  "weasyprint>=60.0",
  "openai>=1.30",
  "anthropic>=0.30",
  "google-generativeai>=0.5",
  "tiktoken>=0.7",
  "Pillow>=10.0",
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
